<resources>
    <string name="app_name">Taller4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Titulo</string>
    <string name="autores">autores</string>
    <string name="editorial">editorial</string>
    <string name="add">Add</string>
    <string name="edicion">edicion</string>
    <string name="isbn">ISBN</string>
    <string name="sinopsis">sinopsis</string>
    <string name="tags">tags</string>
    <string name="editoriales">editoriales</string>
</resources>
