<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewBookActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"/>

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autores"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/autores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/autores"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_autores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edicion"/>

        <EditText
            android:id="@+id/edicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edicion"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editorial"/>

        <EditText
            android:id="@+id/editorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editorial"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isbn"/>

        <EditText
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isbn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis"/>

        <EditText
            android:id="@+id/sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sinopsis"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tags"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar Libro"/>

    </LinearLayout>



</LinearLayout>